[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/ScoreFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/MessageFont.tres" type="DynamicFont" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LeftScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="RightScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="CenterLine" type="Line2D" parent="."]
points = PoolVector2Array( -5, -89 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -17.5
margin_right = 48.5
margin_bottom = 17.5
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="PauseMessageLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
